--- a/test/LaTeXAndHTML/succeed/Indenting4.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting4.tex
@@ -5,26 +5,26 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[0I]\AgdaModule{Indenting4}%
-\>[1I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{Indenting4}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \end{code}
 
 \begin{code}%
 \>[0][@{}l@{\AgdaIndent{1}}]%
-\>[2]\AgdaFunction{Pow}%
-\>[2I]\AgdaSymbol{:}%
-\>[3I]\AgdaPrimitiveType{Set}%
-\>[4I]\AgdaSymbol{→}%
-\>[5I]\AgdaPrimitiveType{Set₁}\<%
+\>[2]\AgdaFunction{Pow}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{1}}]%
-\>[2]\AgdaFunction{Pow}%
-\>[6I]\AgdaBound{X}%
-\>[7I]\AgdaSymbol{=}%
-\>[8I]\AgdaBound{X}%
-\>[9I]\AgdaSymbol{→}%
-\>[10I]\AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaFunction{Pow}\AgdaSpace{}%
+\AgdaBound{X}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{X}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \end{document}
