--- a/test/LaTeXAndHTML/succeed/Indenting7.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting7.tex
@@ -3,106 +3,106 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[0I]\AgdaModule{Indenting7}%
-\>[1I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{Indenting7}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{module}%
-\>[2I]\AgdaModule{A₁}%
-\>[3I]\AgdaKeyword{where}\<%
+\>[2]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{A₁}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{module}%
-\>[4I]\AgdaModule{A₂}%
-\>[5I]\AgdaKeyword{where}\<%
+\>[2]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{A₂}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaKeyword{module}%
-\>[6I]\AgdaModule{B₁}%
-\>[7I]\AgdaKeyword{where}\<%
+\>[4]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{B₁}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaKeyword{module}%
-\>[8I]\AgdaModule{B₂}%
-\>[9I]\AgdaKeyword{where}\<%
+\>[4]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{B₂}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaKeyword{module}%
-\>[10I]\AgdaModule{C₁}%
-\>[11I]\AgdaKeyword{where}\<%
+\>[6]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{C₁}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaKeyword{module}%
-\>[12I]\AgdaModule{C₂}%
-\>[13I]\AgdaKeyword{where}\<%
+\>[6]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{C₂}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[6][@{}l@{\AgdaIndent{0}}]%
-\>[8]\AgdaKeyword{module}%
-\>[14I]\AgdaModule{D₁}%
-\>[15I]\AgdaKeyword{where}\<%
+\>[8]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{D₁}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[6][@{}l@{\AgdaIndent{0}}]%
-\>[8]\AgdaKeyword{module}%
-\>[16I]\AgdaModule{D₂}%
-\>[17I]\AgdaKeyword{where}\<%
+\>[8]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{D₂}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaKeyword{module}%
-\>[18I]\AgdaModule{C₃}%
-\>[19I]\AgdaKeyword{where}\<%
+\>[6]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{C₃}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaKeyword{module}%
-\>[20I]\AgdaModule{C₄}%
-\>[21I]\AgdaKeyword{where}\<%
+\>[6]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{C₄}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{module}%
-\>[22I]\AgdaModule{A₃}%
-\>[23I]\AgdaKeyword{where}\<%
+\>[2]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{A₃}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaKeyword{module}%
-\>[24I]\AgdaModule{B₃}%
-\>[25I]\AgdaKeyword{where}\<%
+\>[4]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{B₃}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaKeyword{module}%
-\>[26I]\AgdaModule{C₅}%
-\>[27I]\AgdaKeyword{where}\<%
+\>[6]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{C₅}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[6][@{}l@{\AgdaIndent{0}}]%
-\>[8]\AgdaKeyword{module}%
-\>[28I]\AgdaModule{D₃}%
-\>[29I]\AgdaKeyword{where}\<%
+\>[8]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{D₃}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaKeyword{module}%
-\>[30I]\AgdaModule{C₆}%
-\>[31I]\AgdaKeyword{where}\<%
+\>[6]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{C₆}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaKeyword{module}%
-\>[32I]\AgdaModule{B₄}%
-\>[33I]\AgdaKeyword{where}\<%
+\>[4]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{B₄}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{module}%
-\>[34I]\AgdaModule{A₄}%
-\>[35I]\AgdaKeyword{where}\<%
+\>[2]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{A₄}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \end{code}
 
 \end{document}
