--- a/test/LaTeXAndHTML/succeed/Issue1053.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1053.tex
@@ -3,45 +3,45 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaFunction{id}%
-\>[0I]\AgdaSymbol{:}%
-\>[1I]\AgdaSymbol{\{}\AgdaBound{A}%
-\>[2I]\AgdaSymbol{:}%
-\>[3I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
-\>[4I]\AgdaSymbol{→}%
-\>[5I]\AgdaBound{A}%
-\>[6I]\AgdaSymbol{→}%
-\>[7I]\AgdaBound{A}\<%
+\>[0]\AgdaFunction{id}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
-\>[0]\AgdaFunction{id}%
-\>[8I]\AgdaSymbol{\{}\AgdaArgument{A}%
-\>[9I]\AgdaSymbol{=}%
-\>[10I]\AgdaBound{A}\AgdaSymbol{\}}%
-\>[11I]\AgdaBound{x}%
-\>[12I]\AgdaSymbol{=}%
-\>[13I]\AgdaBound{x}\<%
+\>[0]\AgdaFunction{id}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{A}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{x}\<%
 \\
 %
 \\
-\>[0]\AgdaFunction{foo}%
-\>[14I]\AgdaSymbol{:}%
-\>[15I]\AgdaSymbol{(}\AgdaBound{A}%
-\>[16I]\AgdaSymbol{:}%
-\>[17I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
-\>[18I]\AgdaSymbol{→}%
-\>[19I]\AgdaBound{A}%
-\>[20I]\AgdaSymbol{→}%
-\>[21I]\AgdaBound{A}\<%
+\>[0]\AgdaFunction{foo}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
-\>[0]\AgdaFunction{foo}%
-\>[22I]\AgdaBound{B}%
-\>[23I]\AgdaBound{x}%
-\>[24I]\AgdaSymbol{=}%
-\>[25I]\AgdaFunction{id}%
-\>[26I]\AgdaSymbol{\{}\AgdaArgument{A}%
-\>[27I]\AgdaSymbol{=}%
-\>[28I]\AgdaBound{B}\AgdaSymbol{\}}%
-\>[29I]\AgdaBound{x}\<%
+\>[0]\AgdaFunction{foo}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{id}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{A}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{x}\<%
 \end{code}
 
 \end{document}
