--- a/test/LaTeXAndHTML/succeed/Issue1241.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1241.tex
@@ -9,18 +9,18 @@
 This is the actual test.
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[0I]\AgdaSymbol{\_}%
-\>[1I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaSymbol{\_}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaPostulate{IsThisCorrectlyLaTeXed}%
-\>[2I]\AgdaSymbol{:}%
-\>[3I]\AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{IsThisCorrectlyLaTeXed}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \end{document}
