--- a/test/LaTeXAndHTML/succeed/Issue1618.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1618.tex
@@ -6,103 +6,103 @@
 The let should be properly aligned in the following code:
 
 \begin{code}%
-\>[0]\AgdaFunction{id}%
-\>[0I]\AgdaSymbol{:}%
-\>[1I]\AgdaSymbol{(}\AgdaBound{A}%
-\>[2I]\AgdaSymbol{:}%
-\>[3I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
-\>[4I]\AgdaSymbol{→}%
-\>[5I]\AgdaBound{A}%
-\>[6I]\AgdaSymbol{→}%
-\>[7I]\AgdaBound{A}\<%
+\>[0]\AgdaFunction{id}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
-\>[0]\AgdaFunction{id}%
-\>[8I]\AgdaBound{A}%
-\>[9I]\AgdaSymbol{=}\<%
+\>[0]\AgdaFunction{id}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{=}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{let}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaBound{id'}%
-\>[10I]\AgdaSymbol{:}%
-\>[11I]\AgdaFunction{B}%
-\>[12I]\AgdaSymbol{→}%
-\>[13I]\AgdaFunction{B}\<%
+\>[4]\AgdaBound{id'}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{B}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{B}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaBound{id'}%
-\>[14I]\AgdaSymbol{=}%
-\>[15I]\AgdaSymbol{λ}%
-\>[16I]\AgdaBound{a}%
-\>[17I]\AgdaSymbol{→}%
-\>[18I]\AgdaBound{a}\<%
+\>[4]\AgdaBound{id'}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{λ}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{a}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{in}%
-\>[19I]\AgdaBound{id'}\<%
+\>[2]\AgdaKeyword{in}\AgdaSpace{}%
+\AgdaBound{id'}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{where}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaFunction{B}%
-\>[20I]\AgdaSymbol{:}%
-\>[21I]\AgdaPrimitiveType{Set}\<%
+\>[4]\AgdaFunction{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaFunction{B}%
-\>[22I]\AgdaSymbol{=}%
-\>[23I]\AgdaBound{A}\<%
+\>[4]\AgdaFunction{B}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \end{code}
 
 This should also work if the new block is following after the
 keyword, as opposed to on a new line.
 
 \begin{code}%
-\>[0]\AgdaFunction{di}%
-\>[24I]\AgdaSymbol{:}%
-\>[25I]\AgdaSymbol{(}\AgdaBound{A}%
-\>[26I]\AgdaSymbol{:}%
-\>[27I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
-\>[28I]\AgdaSymbol{→}%
-\>[29I]\AgdaBound{A}%
-\>[30I]\AgdaSymbol{→}%
-\>[31I]\AgdaBound{A}\<%
+\>[0]\AgdaFunction{di}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
-\>[0]\AgdaFunction{di}%
-\>[32I]\AgdaBound{A}%
-\>[33I]\AgdaSymbol{=}\<%
+\>[0]\AgdaFunction{di}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{=}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{let}%
-\>[7]\AgdaBound{id'}%
-\>[34I]\AgdaSymbol{:}%
-\>[35I]\AgdaFunction{B}%
-\>[36I]\AgdaSymbol{→}%
-\>[37I]\AgdaFunction{B}\<%
+\>[7]\AgdaBound{id'}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{B}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{B}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[7]\AgdaBound{id'}%
-\>[38I]\AgdaSymbol{=}%
-\>[39I]\AgdaSymbol{λ}%
-\>[40I]\AgdaBound{a}%
-\>[41I]\AgdaSymbol{→}%
-\>[42I]\AgdaBound{a}\<%
+\>[7]\AgdaBound{id'}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{λ}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{a}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{in}%
-\>[43I]\AgdaBound{id'}\<%
+\>[2]\AgdaKeyword{in}\AgdaSpace{}%
+\AgdaBound{id'}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{where}%
-\>[9]\AgdaFunction{B}%
-\>[44I]\AgdaSymbol{:}%
-\>[45I]\AgdaPrimitiveType{Set}\<%
+\>[9]\AgdaFunction{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[9]\AgdaFunction{B}%
-\>[46I]\AgdaSymbol{=}%
-\>[47I]\AgdaBound{A}\<%
+\>[9]\AgdaFunction{B}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \end{code}
 \end{document}
