--- a/test/LaTeXAndHTML/succeed/Issue982.tex
+++ b/test/LaTeXAndHTML/succeed/Issue982.tex
@@ -35,100 +35,100 @@
 %\renewcommand{\AgdaIndent}{\;\;}
 
 \begin{code}%
-\>[0]\AgdaKeyword{record}%
-\>[0I]\AgdaRecord{Sigma}%
-\>[1I]\AgdaSymbol{(}\AgdaBound{A}%
-\>[2I]\AgdaSymbol{:}%
-\>[3I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
-\>[4I]\AgdaSymbol{(}\AgdaBound{B}%
-\>[5I]\AgdaSymbol{:}%
-\>[6I]\AgdaBound{A}%
-\>[7I]\AgdaSymbol{→}%
-\>[8I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
-\>[9I]\AgdaSymbol{:}%
-\>[10I]\AgdaPrimitiveType{Set}%
-\>[11I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\AgdaRecord{Sigma}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{constructor}%
-\>[12I]\AgdaInductiveConstructor{\_,\_}\<%
+\>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
+\AgdaInductiveConstructor{\_,\_}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaField{proj₁}%
-\>[13I]\AgdaSymbol{:}%
-\>[14I]\AgdaBound{A}\<%
+\>[4]\AgdaField{proj₁}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaField{proj₂}%
-\>[15I]\AgdaSymbol{:}%
-\>[16I]\AgdaBound{B}%
-\>[17I]\AgdaField{proj₁}\<%
+\>[4]\AgdaField{proj₂}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaField{proj₁}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{open}%
-\>[18I]\AgdaModule{Sigma}%
-\>[19I]\AgdaKeyword{public}\<%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{Sigma}\AgdaSpace{}%
+\AgdaKeyword{public}\<%
 \end{code}
 
 \begin{code}%
 \>[0]\AgdaFunction{uncurry}%
 \>[20I]\AgdaSymbol{:}%
-\>[21I]\AgdaSymbol{\{}\AgdaBound{A}%
-\>[22I]\AgdaSymbol{:}%
-\>[23I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
-\>[24I]\AgdaSymbol{\{}\AgdaBound{B}%
-\>[25I]\AgdaSymbol{:}%
-\>[26I]\AgdaBound{A}%
-\>[27I]\AgdaSymbol{→}%
-\>[28I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
-\>[29I]\AgdaSymbol{\{}\AgdaBound{C}%
-\>[30I]\AgdaSymbol{:}%
-\>[31I]\AgdaRecord{Sigma}%
-\>[32I]\AgdaBound{A}%
-\>[33I]\AgdaBound{B}%
-\>[34I]\AgdaSymbol{→}%
-\>[35I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
-\>[36I]\AgdaSymbol{→}\<%
+\>[21I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{C}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaRecord{Sigma}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
 \\
 \>[20I][@{}l@{\AgdaIndent{0}}]\<[21I]%
-\>[10]\AgdaSymbol{((}\AgdaBound{x}%
-\>[37I]\AgdaSymbol{:}%
-\>[38I]\AgdaBound{A}\AgdaSymbol{)}%
-\>[39I]\AgdaSymbol{→}%
-\>[40I]\AgdaSymbol{(}\AgdaBound{y}%
-\>[41I]\AgdaSymbol{:}%
-\>[42I]\AgdaBound{B}%
-\>[43I]\AgdaBound{x}\AgdaSymbol{)}%
-\>[44I]\AgdaSymbol{→}%
-\>[45I]\AgdaBound{C}%
-\>[46I]\AgdaSymbol{(}\AgdaBound{x}%
-\>[47I]\AgdaInductiveConstructor{,}%
-\>[48I]\AgdaBound{y}\AgdaSymbol{))}%
-\>[49I]\AgdaSymbol{→}\<%
+\>[10]\AgdaSymbol{((}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{y}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{C}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaInductiveConstructor{,}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
 \\
 \>[20I][@{}l@{\AgdaIndent{0}}]%
-\>[10]\AgdaSymbol{((}\AgdaBound{p}%
-\>[50I]\AgdaSymbol{:}%
-\>[51I]\AgdaRecord{Sigma}%
-\>[52I]\AgdaBound{A}%
-\>[53I]\AgdaBound{B}\AgdaSymbol{)}%
-\>[54I]\AgdaSymbol{→}%
-\>[55I]\AgdaBound{C}%
-\>[56I]\AgdaBound{p}\AgdaSymbol{)}\<%
+\>[10]\AgdaSymbol{((}\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaRecord{Sigma}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{C}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaFunction{uncurry}%
-\>[57I]\AgdaBound{f}%
-\>[58I]\AgdaSymbol{(}\AgdaBound{x}%
-\>[59I]\AgdaInductiveConstructor{,}%
-\>[60I]\AgdaBound{y}\AgdaSymbol{)}%
-\>[61I]\AgdaSymbol{=}%
-\>[62I]\AgdaBound{f}%
-\>[63I]\AgdaBound{x}%
-\>[64I]\AgdaBound{y}\<%
+\>[0]\AgdaFunction{uncurry}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaInductiveConstructor{,}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaBound{y}\<%
 \end{code}
 
 \end{document}
