--- a/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.tex
+++ b/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.tex
@@ -11,9 +11,9 @@
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaPostulate{Whatever}%
-\>[0I]\AgdaSymbol{:}%
-\>[1I]\AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{Whatever}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \end{document}
