--- a/test/LaTeXAndHTML/succeed/Multiline.tex
+++ b/test/LaTeXAndHTML/succeed/Multiline.tex
@@ -2,15 +2,15 @@
 \usepackage{agda}
 \begin{document}
 \begin{code}%
-\>[0]\AgdaKeyword{open}%
-\>[0I]\AgdaKeyword{import}%
-\>[1I]\AgdaModule{Agda.Builtin.String}\<%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Agda.Builtin.String}\<%
 \\
 %
 \\
-\>[0]\AgdaFunction{argh}%
-\>[2I]\AgdaSymbol{:}%
-\>[3I]\AgdaPostulate{String}\<%
+\>[0]\AgdaFunction{argh}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPostulate{String}\<%
 \\
 \>[0]\AgdaFunction{argh}%
 \>[4I]\AgdaSymbol{=}%
