--- a/test/LaTeXAndHTML/succeed/Options.tex
+++ b/test/LaTeXAndHTML/succeed/Options.tex
@@ -10,8 +10,8 @@
 \>[13]\AgdaOption{{-}{-}no{-}positivity{-}check}\<%
 \\
 \>[0I][@{}l@{\AgdaIndent{0}}]%
-\>[13]\AgdaOption{{-}{-}no{-}termination{-}check}%
-\>[1I]\AgdaSymbol{\#{-}\}}\<%
+\>[13]\AgdaOption{{-}{-}no{-}termination{-}check}\AgdaSpace{}%
+\AgdaSymbol{\#{-}\}}\<%
 \end{code}
 
 \end{document}
