--- a/test/LaTeXAndHTML/succeed/PatternSynonyms2.tex
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms2.tex
@@ -3,54 +3,54 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{data}%
-\>[0I]\AgdaDatatype{Nat}%
-\>[1I]\AgdaSymbol{:}%
-\>[2I]\AgdaPrimitiveType{Set}%
-\>[3I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{Nat}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaInductiveConstructor{zero}%
-\>[4I]\AgdaSymbol{:}%
-\>[5I]\AgdaDatatype{Nat}\<%
+\>[2]\AgdaInductiveConstructor{zero}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Nat}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaInductiveConstructor{suc}%
-\>[6I]\AgdaSymbol{:}%
-\>[7I]\AgdaDatatype{Nat}%
-\>[8I]\AgdaSymbol{→}%
-\>[9I]\AgdaDatatype{Nat}\<%
+\>[2]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Nat}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Nat}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{module}%
-\>[10I]\AgdaModule{\_}%
-\>[11I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{\_}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{pattern}%
-\>[12I]\AgdaInductiveConstructor{two}%
-\>[16]\AgdaSymbol{=}%
-\>[13I]\AgdaInductiveConstructor{suc}%
-\>[14I]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}%
-\>[15I]\AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
+\>[2]\AgdaKeyword{pattern}\AgdaSpace{}%
+\AgdaInductiveConstructor{two}%
+\>[16]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{pattern}%
-\>[16I]\AgdaInductiveConstructor{three}%
-\>[17I]\AgdaSymbol{=}%
-\>[18I]\AgdaInductiveConstructor{suc}%
-\>[19I]\AgdaInductiveConstructor{two}\<%
+\>[2]\AgdaKeyword{pattern}\AgdaSpace{}%
+\AgdaInductiveConstructor{three}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaInductiveConstructor{two}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{data}%
-\>[20I]\AgdaDatatype{Bot}%
-\>[21I]\AgdaSymbol{:}%
-\>[22I]\AgdaPrimitiveType{Set}%
-\>[23I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{Bot}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \end{code}
 
 \end{document}
