--- a/test/LaTeXAndHTML/succeed/Relative-indentation.tex
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.tex
@@ -12,9 +12,9 @@
 \>[5]\AgdaPostulate{B}\<%
 \\
 \>[5][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaPostulate{C}%
-\>[0I]\AgdaSymbol{:}%
-\>[1I]\AgdaPrimitiveType{Set}\<%
+\>[6]\AgdaPostulate{C}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{code}%
@@ -27,9 +27,9 @@
 %
 \\
 \>[5][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaPostulate{F}%
-\>[2I]\AgdaSymbol{:}%
-\>[3I]\AgdaPrimitiveType{Set}\<%
+\>[6]\AgdaPostulate{F}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{code}%
@@ -38,16 +38,16 @@
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaPostulate{G}%
 \>[5]\AgdaPostulate{H}%
-\>[8]\AgdaSymbol{:}%
-\>[4I]\AgdaPrimitiveType{Set}\<%
+\>[8]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaPostulate{I}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaPostulate{J}%
-\>[5I]\AgdaSymbol{:}%
-\>[6I]\AgdaPrimitiveType{Set}\<%
+\>[6]\AgdaPostulate{J}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{AgdaMultiCode}{2}
@@ -60,22 +60,22 @@
 \end{code}
 \begin{code}%
 \>[5][@{}l@{\AgdaIndent{1}}]%
-\>[6]\AgdaPostulate{M}%
-\>[7I]\AgdaSymbol{:}%
-\>[8I]\AgdaPrimitiveType{Set}\<%
+\>[6]\AgdaPostulate{M}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 \end{AgdaMultiCode}
 
 \begin{code}%
-\>[0]\AgdaKeyword{record}%
-\>[9I]\AgdaRecord{R}%
-\>[10I]\AgdaSymbol{:}%
-\>[11I]\AgdaPrimitiveType{Set₁}%
-\>[12I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\AgdaRecord{R}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{field}%
-\>[13I]\AgdaField{N}%
+\>[2]\AgdaKeyword{field}\AgdaSpace{}%
+\AgdaField{N}%
 \>[14I]\AgdaSymbol{:}\<%
 \\
 \>[14I][@{}l@{\AgdaIndent{0}}]%
@@ -87,24 +87,24 @@
 
 \begin{AgdaAlign}
 text \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[15I]\AgdaModule{\_}%
-\>[16I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{\_}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \end{code} more text
     also text  \begin{code}%
 \>[0][@{}l@{\AgdaIndent{1}}]%
-\>[4]\AgdaKeyword{postulate}%
-\>[17I]\AgdaPostulate{O}%
-\>[18I]\AgdaSymbol{:}%
-\>[19I]\AgdaPrimitiveType{Set}\<%
+\>[4]\AgdaKeyword{postulate}\AgdaSpace{}%
+\AgdaPostulate{O}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code} text again
 
  text          \begin{code}%
 \>[0][@{}l@{\AgdaIndent{2}}]%
-\>[4]\AgdaKeyword{postulate}%
-\>[20I]\AgdaPostulate{o}%
-\>[21I]\AgdaSymbol{:}%
-\>[22I]\AgdaPostulate{O}\<%
+\>[4]\AgdaKeyword{postulate}\AgdaSpace{}%
+\AgdaPostulate{o}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPostulate{O}\<%
 \end{code}   text             
 \end{AgdaAlign}
 
@@ -112,23 +112,23 @@ text \begin{code}%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[1]\AgdaPostulate{P}%
-\>[23I]\AgdaSymbol{:}%
-\>[24I]\AgdaPrimitiveType{Set}\<%
+\>[1]\AgdaPostulate{P}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[25I]\AgdaModule{\_}%
-\>[26I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{\_}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[1]\AgdaKeyword{postulate}\<%
 \\
 \>[1][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaPostulate{Q}%
-\>[27I]\AgdaSymbol{:}%
-\>[28I]\AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{Q}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{code}%
@@ -140,55 +140,55 @@ text \begin{code}%
 \>[9]\AgdaKeyword{postulate}\<%
 \\
 \>[9][@{}l@{\AgdaIndent{0}}]%
-\>[10]\AgdaPostulate{S}%
-\>[31I]\AgdaSymbol{:}%
-\>[32I]\AgdaPrimitiveType{Set}\<%
+\>[10]\AgdaPostulate{S}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{AgdaMultiCode}{2}
 \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[33I]\AgdaModule{\_}%
-\>[34I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{\_}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \end{code}
 \begin{code}%
 \>[0][@{}l@{\AgdaIndent{1}}]%
 \>[2]\AgdaKeyword{postulate}%
-\>[35I]\AgdaPostulate{T}%
-\>[36I]\AgdaSymbol{:}%
-\>[37I]\AgdaPrimitiveType{Set}\<%
+\>[35I]\AgdaPostulate{T}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]\<[35I]%
-\>[12]\AgdaPostulate{U}%
-\>[38I]\AgdaSymbol{:}%
-\>[39I]\AgdaPrimitiveType{Set}\<%
+\>[12]\AgdaPostulate{U}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 \end{AgdaMultiCode}
 
 \begin{AgdaSuppressSpace}{2}
 \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[40I]\AgdaModule{\_}%
-\>[41I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{\_}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \end{code}
 \begin{code}%
 \>[0][@{}l@{\AgdaIndent{1}}]%
 \>[2]\AgdaKeyword{postulate}%
-\>[42I]\AgdaPostulate{V}%
-\>[43I]\AgdaSymbol{:}%
-\>[44I]\AgdaPrimitiveType{Set}\<%
+\>[42I]\AgdaPostulate{V}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]\<[42I]%
-\>[12]\AgdaPostulate{W}%
-\>[45I]\AgdaSymbol{:}%
-\>[46I]\AgdaPrimitiveType{Set}\<%
+\>[12]\AgdaPostulate{W}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 \end{AgdaSuppressSpace}
 
 \begin{code}%
-\>[0]\AgdaFunction{X}%
-\>[47I]\AgdaSymbol{:}%
-\>[48I]\AgdaPrimitiveType{Set₁}\<%
+\>[0]\AgdaFunction{X}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\<%
 \\
 \>[0]\AgdaFunction{X}%
 \>[49I]\AgdaSymbol{=}\<%
@@ -198,28 +198,28 @@ text \begin{code}%
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaFunction{Y}%
-\>[50I]\AgdaSymbol{:}%
-\>[51I]\AgdaPrimitiveType{Set₁}\<%
+\>[0]\AgdaFunction{Y}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\<%
 \\
-\>[0]\AgdaFunction{Y}%
-\>[52I]\AgdaSymbol{=}%
+\>[0]\AgdaFunction{Y}\AgdaSpace{}%
+\AgdaSymbol{=}%
 \>[10]\AgdaPrimitiveType{Set}\<%
 \\
 %
 \\
-\>[0]\AgdaFunction{Zzzzzzzzz}%
-\>[53I]\AgdaSymbol{:}%
-\>[54I]\AgdaPrimitiveType{Set}%
-\>[55I]\AgdaSymbol{→}%
-\>[56I]\AgdaPrimitiveType{Set}\<%
+\>[0]\AgdaFunction{Zzzzzzzzz}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
 \>[0]\AgdaFunction{Zzzzzzzzz}%
 \>[57I]\AgdaBound{X}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]\<[57I]%
-\>[10]\AgdaSymbol{=}%
-\>[58I]\AgdaBound{X}\<%
+\>[10]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{X}\<%
 \end{code}
 
 \end{document}
