--- a/test/LaTeXAndHTML/succeed/Tag.tex
+++ b/test/LaTeXAndHTML/succeed/Tag.tex
@@ -5,66 +5,66 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[0I]\AgdaModule{Tag}%
-\>[1I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{Tag}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{module}%
-\>[2I]\AgdaModule{Apa}%
-\>[3I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{Apa}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 %
 \\
-\>[0]\AgdaFunction{bepa}%
-\>[4I]\AgdaSymbol{:}%
-\>[5I]\AgdaPrimitiveType{Set}%
-\>[6I]\AgdaSymbol{→}%
-\>[7I]\AgdaPrimitiveType{Set}\<%
+\>[0]\AgdaFunction{bepa}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
-\>[0]\AgdaFunction{bepa}%
-\>[8I]\AgdaBound{x}%
-\>[9I]\AgdaSymbol{=}%
-\>[10I]\AgdaBound{x}\<%
+\>[0]\AgdaFunction{bepa}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{x}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{data}%
-\>[11I]\AgdaDatatype{Cepa}%
-\>[12I]\AgdaSymbol{:}%
-\>[13I]\AgdaPrimitiveType{Set}%
-\>[14I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{Cepa}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaInductiveConstructor{cepa}%
-\>[15I]\AgdaSymbol{:}%
-\>[16I]\AgdaDatatype{Cepa}\<%
+\>[2]\AgdaInductiveConstructor{cepa}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Cepa}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{record}%
-\>[17I]\AgdaRecord{Depa}%
-\>[18I]\AgdaSymbol{:}%
-\>[19I]\AgdaPrimitiveType{Set₁}%
-\>[20I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\AgdaRecord{Depa}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaField{depa}%
-\>[21I]\AgdaSymbol{:}%
-\>[22I]\AgdaPrimitiveType{Set}\<%
+\>[4]\AgdaField{depa}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
 %
 \\
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaPostulate{epa}%
-\>[23I]\AgdaSymbol{:}%
-\>[24I]\AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{epa}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
 %
 \\
@@ -72,13 +72,13 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaPostulate{α}%
-\>[6]\AgdaSymbol{:}%
-\>[25I]\AgdaPrimitiveType{Set}\<%
+\>[6]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaPostulate{\_∘\_}%
-\>[26I]\AgdaSymbol{:}%
-\>[27I]\AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{\_∘\_}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \begin{tabular}{ll}
