--- a/test/LaTeXAndHTML/succeed/ThreeNewLines.tex
+++ b/test/LaTeXAndHTML/succeed/ThreeNewLines.tex
@@ -9,9 +9,9 @@
 \\
 %
 \\
-\>[0]\AgdaKeyword{module}%
-\>[0I]\AgdaModule{ThreeNewLines}%
-\>[1I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{ThreeNewLines}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 %
 \\
