--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.tex
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.tex
@@ -12,14 +12,14 @@
 \>[0]\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaPostulate{A}%
-\>[0I]\AgdaSymbol{:}%
-\>[1I]\AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaPostulate{B}%
-\>[2I]\AgdaSymbol{:}%
-\>[3I]\AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 \hrule
 \begin{code}%
@@ -51,9 +51,9 @@
 \end{code}
 \hrule
 \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[4I]\AgdaModule{\_}%
-\>[5I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{\_}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \end{code}
 \begin{code}%
 \>[0]\<%
@@ -62,9 +62,9 @@
 \>[2]\AgdaKeyword{postulate}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaPostulate{C}%
-\>[6I]\AgdaSymbol{:}%
-\>[7I]\AgdaPrimitiveType{Set}\<%
+\>[4]\AgdaPostulate{C}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 \hrule
 \begin{AgdaAlign}
@@ -73,10 +73,10 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaPostulate{F}%
-\>[5]\AgdaSymbol{:}%
-\>[8I]\AgdaPrimitiveType{Set}%
-\>[9I]\AgdaSymbol{→}%
-\>[10I]\AgdaPrimitiveType{Set}\<%
+\>[5]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaPostulate{X}%
