--- a/test/LaTeXAndHTML/succeed/UnicodeInput.tex
+++ b/test/LaTeXAndHTML/succeed/UnicodeInput.tex
@@ -3,20 +3,20 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{data}%
-\>[0I]\AgdaDatatype{αβγδεζθικλμνξρστυφχψω}%
-\>[1I]\AgdaSymbol{:}%
-\>[2I]\AgdaPrimitiveType{Set₁}%
-\>[3I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{αβγδεζθικλμνξρστυφχψω}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaPostulate{→⇒⇛⇉⇄↦⇨↠⇀⇁}%
-\>[4I]\AgdaSymbol{:}%
-\>[5I]\AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{→⇒⇛⇉⇄↦⇨↠⇀⇁}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \[
