--- a/test/LaTeXAndHTML/succeed/AccidentalSpacesBeforeEndCode.tex
+++ b/test/LaTeXAndHTML/succeed/AccidentalSpacesBeforeEndCode.tex
@@ -5,9 +5,9 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[0I]\AgdaModule{AccidentalSpacesBeforeEndCode}%
-\>[1I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{AccidentalSpacesBeforeEndCode}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \end{code}
 
 \end{document}
