--- a/test/LaTeXAndHTML/succeed/EscapedTeXComment.tex
+++ b/test/LaTeXAndHTML/succeed/EscapedTeXComment.tex
@@ -5,10 +5,10 @@
 \begin{document}
 
 100\% postulated: \begin{code}%
-\>[0]\AgdaKeyword{postulate}%
-\>[0I]\AgdaPostulate{A}%
-\>[1I]\AgdaSymbol{:}%
-\>[2I]\AgdaPrimitiveType{Set}\<%
+\>[0]\AgdaKeyword{postulate}\AgdaSpace{}%
+\AgdaPostulate{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \end{document}
