--- a/test/LaTeXAndHTML/succeed/Grapheme-clusters.tex
+++ b/test/LaTeXAndHTML/succeed/Grapheme-clusters.tex
@@ -14,29 +14,29 @@
 \>[12]\AgdaPostulate{A}\<%
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]%
-\>[12]\AgdaPostulate{B}%
-\>[0I]\AgdaSymbol{:}%
-\>[1I]\AgdaPrimitiveType{Set}\<%
+\>[12]\AgdaPostulate{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 The two \AgdaKeyword{field} keywords should not be aligned:
 \begin{code}%
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{record}%
-\>[2I]\AgdaRecord{+̲}%
-\>[3I]\AgdaSymbol{:}%
-\>[4I]\AgdaPrimitiveType{Set₁}%
-\>[5I]\AgdaKeyword{where}%
-\>[25]\AgdaKeyword{field}%
-\>[6I]\AgdaField{C}%
-\>[7I]\AgdaSymbol{:}%
-\>[8I]\AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaKeyword{record}\AgdaSpace{}%
+\AgdaRecord{+̲}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\AgdaSpace{}%
+\AgdaKeyword{where}%
+\>[25]\AgdaKeyword{field}\AgdaSpace{}%
+\AgdaField{C}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
 \>[25][@{}l@{\AgdaIndent{0}}]%
-\>[26]\AgdaKeyword{field}%
-\>[9I]\AgdaField{D}%
-\>[10I]\AgdaSymbol{:}%
-\>[11I]\AgdaPrimitiveType{Set}\<%
+\>[26]\AgdaKeyword{field}\AgdaSpace{}%
+\AgdaField{D}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \end{document}
