--- a/test/LaTeXAndHTML/succeed/Indenting5.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting5.tex
@@ -5,43 +5,43 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{record}%
-\>[0I]\AgdaRecord{Sigma}%
-\>[1I]\AgdaSymbol{(}\AgdaBound{A}%
-\>[2I]\AgdaSymbol{:}%
-\>[3I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
-\>[4I]\AgdaSymbol{(}\AgdaBound{B}%
-\>[5I]\AgdaSymbol{:}%
-\>[6I]\AgdaBound{A}%
-\>[7I]\AgdaSymbol{→}%
-\>[8I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
-\>[9I]\AgdaSymbol{:}%
-\>[10I]\AgdaPrimitiveType{Set}%
-\>[11I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\AgdaRecord{Sigma}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{constructor}%
-\>[12I]\AgdaInductiveConstructor{\_,\_}\<%
+\>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
+\AgdaInductiveConstructor{\_,\_}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaField{proj₁}%
-\>[13I]\AgdaSymbol{:}%
-\>[14I]\AgdaBound{A}\<%
+\>[4]\AgdaField{proj₁}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaField{proj₂}%
-\>[15I]\AgdaSymbol{:}%
-\>[16I]\AgdaBound{B}%
-\>[17I]\AgdaField{proj₁}\<%
+\>[4]\AgdaField{proj₂}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaField{proj₁}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{open}%
-\>[18I]\AgdaModule{Sigma}%
-\>[19I]\AgdaKeyword{public}\<%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{Sigma}\AgdaSpace{}%
+\AgdaKeyword{public}\<%
 \end{code}
 
 \end{document}
