--- a/test/LaTeXAndHTML/succeed/Indenting6.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting6.tex
@@ -3,72 +3,72 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{record}%
-\>[0I]\AgdaRecord{Sigma}%
-\>[1I]\AgdaSymbol{(}\AgdaBound{A}%
-\>[2I]\AgdaSymbol{:}%
-\>[3I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
-\>[4I]\AgdaSymbol{(}\AgdaBound{B}%
-\>[5I]\AgdaSymbol{:}%
-\>[6I]\AgdaBound{A}%
-\>[7I]\AgdaSymbol{→}%
-\>[8I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
-\>[9I]\AgdaSymbol{:}%
-\>[10I]\AgdaPrimitiveType{Set}%
-\>[11I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\AgdaRecord{Sigma}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{constructor}%
-\>[12I]\AgdaInductiveConstructor{\_,\_}\<%
+\>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
+\AgdaInductiveConstructor{\_,\_}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaField{proj₁}%
-\>[13I]\AgdaSymbol{:}%
-\>[14I]\AgdaBound{A}\<%
+\>[4]\AgdaField{proj₁}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaField{proj₂}%
-\>[15I]\AgdaSymbol{:}%
-\>[16I]\AgdaBound{B}%
-\>[17I]\AgdaField{proj₁}\<%
+\>[4]\AgdaField{proj₂}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaField{proj₁}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{open}%
-\>[18I]\AgdaModule{Sigma}%
-\>[19I]\AgdaKeyword{public}\<%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{Sigma}\AgdaSpace{}%
+\AgdaKeyword{public}\<%
 \end{code}
 
 \begin{code}%
-\>[0]\AgdaKeyword{record}%
-\>[20I]\AgdaRecord{Equiv}%
-\>[21I]\AgdaSymbol{(}\AgdaBound{X}%
-\>[22I]\AgdaBound{Y}%
-\>[23I]\AgdaSymbol{:}%
-\>[24I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
-\>[25I]\AgdaSymbol{:}%
-\>[26I]\AgdaPrimitiveType{Set}%
-\>[27I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\AgdaRecord{Equiv}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{X}\AgdaSpace{}%
+\AgdaBound{Y}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaField{to}%
-\>[10]\AgdaSymbol{:}%
-\>[28I]\AgdaBound{X}%
-\>[29I]\AgdaSymbol{→}%
-\>[30I]\AgdaBound{Y}\<%
+\>[10]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{X}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{Y}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaField{from}%
-\>[10]\AgdaSymbol{:}%
-\>[31I]\AgdaBound{Y}%
-\>[32I]\AgdaSymbol{→}%
-\>[33I]\AgdaBound{X}\<%
+\>[10]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Y}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{X}\<%
 \end{code}
 
 \end{document}
