--- a/test/LaTeXAndHTML/succeed/Issue1062.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1062.tex
@@ -7,92 +7,92 @@
 \begin{code}%
 \>[0]\<%
 \\
-\>[0]\AgdaSymbol{\{{-}\#}%
-\>[0I]\AgdaKeyword{OPTIONS}%
-\>[1I]\AgdaOption{{-}{-}copatterns}%
-\>[2I]\AgdaOption{{-}{-}sized{-}types}%
-\>[3I]\AgdaSymbol{\#{-}\}}\<%
+\>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
+\AgdaKeyword{OPTIONS}\AgdaSpace{}%
+\AgdaOption{{-}{-}copatterns}\AgdaSpace{}%
+\AgdaOption{{-}{-}sized{-}types}\AgdaSpace{}%
+\AgdaSymbol{\#{-}\}}\<%
 \\
 %
 \\
-\>[0]\AgdaSymbol{\{{-}\#}%
-\>[4I]\AgdaKeyword{BUILTIN} SIZE    \AgdaPostulate{Size}%
+\>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
+\AgdaKeyword{BUILTIN} SIZE    \AgdaPostulate{Size}%
 \>[27]\AgdaSymbol{\#{-}\}}\<%
 \\
-\>[0]\AgdaSymbol{\{{-}\#}%
-\>[5I]\AgdaKeyword{BUILTIN} SIZELT  \AgdaPostulate{Size<\_}%
-\>[6I]\AgdaSymbol{\#{-}\}}\<%
+\>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
+\AgdaKeyword{BUILTIN} SIZELT  \AgdaPostulate{Size<\_}\AgdaSpace{}%
+\AgdaSymbol{\#{-}\}}\<%
 \\
-\>[0]\AgdaSymbol{\{{-}\#}%
-\>[7I]\AgdaKeyword{BUILTIN} SIZESUC \AgdaPostulate{↑\_}%
+\>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
+\AgdaKeyword{BUILTIN} SIZESUC \AgdaPostulate{↑\_}%
 \>[27]\AgdaSymbol{\#{-}\}}\<%
 \\
-\>[0]\AgdaSymbol{\{{-}\#}%
-\>[8I]\AgdaKeyword{BUILTIN} SIZEINF \AgdaPostulate{∞}%
+\>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
+\AgdaKeyword{BUILTIN} SIZEINF \AgdaPostulate{∞}%
 \>[27]\AgdaSymbol{\#{-}\}}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{data}%
-\>[9I]\AgdaDatatype{List}%
-\>[10I]\AgdaSymbol{(}\AgdaBound{A}%
-\>[11I]\AgdaSymbol{:}%
-\>[12I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
-\>[13I]\AgdaSymbol{:}%
-\>[14I]\AgdaPrimitiveType{Set}%
-\>[15I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaInductiveConstructor{[]}%
-\>[16I]\AgdaSymbol{:}%
-\>[17I]\AgdaDatatype{List}%
-\>[18I]\AgdaBound{A}\<%
+\>[2]\AgdaInductiveConstructor{[]}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaInductiveConstructor{\_∷\_}%
-\>[19I]\AgdaSymbol{:}%
-\>[20I]\AgdaSymbol{(}\AgdaBound{x}%
-\>[21I]\AgdaSymbol{:}%
-\>[22I]\AgdaBound{A}\AgdaSymbol{)}%
-\>[23I]\AgdaSymbol{(}\AgdaBound{xs}%
-\>[24I]\AgdaSymbol{:}%
-\>[25I]\AgdaDatatype{List}%
-\>[26I]\AgdaBound{A}\AgdaSymbol{)}%
-\>[27I]\AgdaSymbol{{-}>}%
-\>[28I]\AgdaDatatype{List}%
-\>[29I]\AgdaBound{A}\<%
+\>[2]\AgdaInductiveConstructor{\_∷\_}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{xs}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{{-}>}\AgdaSpace{}%
+\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{record}%
-\>[30I]\AgdaRecord{\_×\_}%
-\>[31I]\AgdaSymbol{(}\AgdaBound{A}%
-\>[32I]\AgdaBound{B}%
-\>[33I]\AgdaSymbol{:}%
-\>[34I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
-\>[35I]\AgdaSymbol{:}%
-\>[36I]\AgdaPrimitiveType{Set}%
-\>[37I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\AgdaRecord{\_×\_}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{constructor}%
-\>[38I]\AgdaInductiveConstructor{\_,\_}\<%
+\>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
+\AgdaInductiveConstructor{\_,\_}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaField{fst}%
-\>[39I]\AgdaSymbol{:}%
-\>[40I]\AgdaBound{A}\<%
+\>[4]\AgdaField{fst}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaField{snd}%
-\>[41I]\AgdaSymbol{:}%
-\>[42I]\AgdaBound{B}\<%
+\>[4]\AgdaField{snd}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{B}\<%
 \\
-\>[0]\AgdaKeyword{open}%
-\>[43I]\AgdaModule{\_×\_}\<%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{\_×\_}\<%
 \\
 %
 \\
@@ -100,80 +100,80 @@
 \\
 %
 \\
-\>[0]\AgdaKeyword{record}%
-\>[44I]\AgdaRecord{Stream}%
-\>[45I]\AgdaSymbol{\{}\AgdaBound{i}%
-\>[46I]\AgdaSymbol{:}%
-\>[47I]\AgdaPostulate{Size}\AgdaSymbol{\}}%
-\>[48I]\AgdaSymbol{(}\AgdaBound{A}%
-\>[49I]\AgdaSymbol{:}%
-\>[50I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
-\>[51I]\AgdaSymbol{:}%
-\>[52I]\AgdaPrimitiveType{Set}%
-\>[53I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\AgdaRecord{Stream}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{i}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPostulate{Size}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{coinductive}\AgdaSymbol{;}%
-\>[54I]\AgdaKeyword{constructor}%
-\>[55I]\AgdaCoinductiveConstructor{\_∷\_}\<%
+\>[2]\AgdaKeyword{coinductive}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaKeyword{constructor}\AgdaSpace{}%
+\AgdaCoinductiveConstructor{\_∷\_}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaField{head}%
-\>[10]\AgdaSymbol{:}%
-\>[56I]\AgdaBound{A}\<%
+\>[10]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaField{tail}%
-\>[10]\AgdaSymbol{:}%
-\>[57I]\AgdaSymbol{∀}%
-\>[58I]\AgdaSymbol{\{}\AgdaBound{j}%
-\>[59I]\AgdaSymbol{:}%
-\>[60I]\AgdaPostulate{Size<}%
-\>[61I]\AgdaBound{i}\AgdaSymbol{\}}%
-\>[62I]\AgdaSymbol{→}%
-\>[63I]\AgdaRecord{Stream}%
-\>[64I]\AgdaSymbol{\{}\AgdaBound{j}\AgdaSymbol{\}}%
-\>[65I]\AgdaBound{A}\<%
+\>[10]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{j}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPostulate{Size<}\AgdaSpace{}%
+\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaRecord{Stream}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{j}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
-\>[0]\AgdaKeyword{open}%
-\>[66I]\AgdaModule{Stream}%
-\>[67I]\AgdaKeyword{public}\<%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{Stream}\AgdaSpace{}%
+\AgdaKeyword{public}\<%
 \\
 %
 \\
-\>[0]\AgdaFunction{\_∷ˢ\_}%
-\>[68I]\AgdaSymbol{:}%
-\>[69I]\AgdaSymbol{∀}%
-\>[70I]\AgdaSymbol{\{}\AgdaBound{i}%
-\>[71I]\AgdaBound{A}\AgdaSymbol{\}}%
-\>[72I]\AgdaSymbol{→}%
-\>[73I]\AgdaBound{A}%
-\>[74I]\AgdaSymbol{→}%
-\>[75I]\AgdaRecord{Stream}%
-\>[76I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}%
-\>[77I]\AgdaBound{A}%
-\>[78I]\AgdaSymbol{→}%
-\>[79I]\AgdaRecord{Stream}%
-\>[80I]\AgdaSymbol{\{}\AgdaPostulate{↑}%
-\>[81I]\AgdaBound{i}\AgdaSymbol{\}}%
-\>[82I]\AgdaBound{A}\<%
+\>[0]\AgdaFunction{\_∷ˢ\_}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{i}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaRecord{Stream}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaRecord{Stream}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaPostulate{↑}\AgdaSpace{}%
+\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
 \>[0]\AgdaField{head}%
-\>[6]\AgdaSymbol{(}\AgdaBound{a}%
-\>[83I]\AgdaFunction{∷ˢ}%
-\>[84I]\AgdaBound{as}\AgdaSymbol{)}%
-\>[85I]\AgdaSymbol{=}%
-\>[86I]\AgdaBound{a}\<%
+\>[6]\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
+\AgdaFunction{∷ˢ}\AgdaSpace{}%
+\AgdaBound{as}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{a}\<%
 \\
 \>[0]\AgdaField{tail}%
-\>[6]\AgdaSymbol{(}\AgdaBound{a}%
-\>[87I]\AgdaFunction{∷ˢ}%
-\>[88I]\AgdaBound{as}\AgdaSymbol{)}%
-\>[89I]\AgdaSymbol{=}%
-\>[90I]\AgdaBound{as}\<%
+\>[6]\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
+\AgdaFunction{∷ˢ}\AgdaSpace{}%
+\AgdaBound{as}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{as}\<%
 \\
 %
 \\
@@ -185,40 +185,40 @@
 \\
 %
 \\
-\>[0]\AgdaFunction{\_++ˢ\_}%
-\>[91I]\AgdaSymbol{:}%
-\>[92I]\AgdaSymbol{∀}%
-\>[93I]\AgdaSymbol{\{}\AgdaBound{i}%
-\>[94I]\AgdaBound{A}\AgdaSymbol{\}}%
-\>[95I]\AgdaSymbol{→}%
-\>[96I]\AgdaDatatype{List}%
-\>[97I]\AgdaBound{A}%
-\>[98I]\AgdaSymbol{→}%
-\>[99I]\AgdaRecord{Stream}%
-\>[100I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}%
-\>[101I]\AgdaBound{A}%
-\>[102I]\AgdaSymbol{→}%
-\>[103I]\AgdaRecord{Stream}%
-\>[104I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}%
-\>[105I]\AgdaBound{A}\<%
+\>[0]\AgdaFunction{\_++ˢ\_}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{i}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaRecord{Stream}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaRecord{Stream}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
 \>[0]\AgdaInductiveConstructor{[]}%
-\>[10]\AgdaFunction{++ˢ}%
-\>[106I]\AgdaBound{s}%
-\>[107I]\AgdaSymbol{=}%
-\>[108I]\AgdaBound{s}\<%
+\>[10]\AgdaFunction{++ˢ}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{s}\<%
 \\
-\>[0]\AgdaSymbol{(}\AgdaBound{a}%
-\>[109I]\AgdaInductiveConstructor{∷}%
-\>[110I]\AgdaBound{as}\AgdaSymbol{)}%
-\>[10]\AgdaFunction{++ˢ}%
-\>[111I]\AgdaBound{s}%
-\>[112I]\AgdaSymbol{=}%
-\>[113I]\AgdaBound{a}%
-\>[114I]\AgdaFunction{∷ˢ}%
-\>[115I]\AgdaSymbol{(}\AgdaBound{as}%
-\>[116I]\AgdaFunction{++ˢ}%
-\>[117I]\AgdaBound{s}\AgdaSymbol{)}\<%
+\>[0]\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
+\AgdaInductiveConstructor{∷}\AgdaSpace{}%
+\AgdaBound{as}\AgdaSymbol{)}%
+\>[10]\AgdaFunction{++ˢ}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSpace{}%
+\AgdaFunction{∷ˢ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{as}\AgdaSpace{}%
+\AgdaFunction{++ˢ}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\<%
 \\
 %
 \\
@@ -226,145 +226,145 @@
 \\
 %
 \\
-\>[0]\AgdaKeyword{record}%
-\>[118I]\AgdaRecord{List1}%
-\>[119I]\AgdaSymbol{(}\AgdaBound{A}%
-\>[120I]\AgdaSymbol{:}%
-\>[121I]\AgdaPrimitiveType{Set}\AgdaSymbol{)}%
-\>[122I]\AgdaSymbol{:}%
-\>[123I]\AgdaPrimitiveType{Set}%
-\>[124I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\AgdaRecord{List1}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{constructor}%
-\>[125I]\AgdaInductiveConstructor{\_∷\_}\<%
+\>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
+\AgdaInductiveConstructor{\_∷\_}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{field}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaField{head}%
-\>[10]\AgdaSymbol{:}%
-\>[126I]\AgdaBound{A}\<%
+\>[10]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaField{tail}%
-\>[10]\AgdaSymbol{:}%
-\>[127I]\AgdaDatatype{List}%
-\>[128I]\AgdaBound{A}\<%
+\>[10]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
-\>[0]\AgdaKeyword{open}%
-\>[129I]\AgdaModule{List1}%
-\>[130I]\AgdaKeyword{using}%
-\>[131I]\AgdaSymbol{(}\AgdaField{head}\AgdaSymbol{;}%
-\>[132I]\AgdaField{tail}\AgdaSymbol{)}\<%
-\\
-%
-\\
-\>[0]\AgdaKeyword{record}%
-\>[133I]\AgdaRecord{⊤}%
-\>[134I]\AgdaSymbol{:}%
-\>[135I]\AgdaPrimitiveType{Set}%
-\>[136I]\AgdaKeyword{where}%
-\>[137I]\AgdaKeyword{constructor}%
-\>[138I]\AgdaInductiveConstructor{trivial}\<%
-\\
-\>[0]\AgdaKeyword{open}%
-\>[139I]\AgdaModule{List1}%
-\>[140I]\AgdaSymbol{(}\AgdaInductiveConstructor{trivial}%
-\>[141I]\AgdaInductiveConstructor{∷}%
-\>[142I]\AgdaInductiveConstructor{[]}\AgdaSymbol{)}%
-\>[143I]\AgdaKeyword{using}%
-\>[144I]\AgdaSymbol{(}head\AgdaSymbol{;} tail\AgdaSymbol{)}%
-\>[145I]\AgdaComment{{-}{-} problem: imports not colored}\<%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{List1}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{head}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaField{tail}\AgdaSymbol{)}\<%
 \\
 %
 \\
-\>[0]\AgdaFunction{unfold⁺}%
-\>[146I]\AgdaSymbol{:}%
-\>[147I]\AgdaSymbol{∀}%
-\>[148I]\AgdaSymbol{\{}\AgdaBound{S}%
-\>[149I]\AgdaSymbol{:}%
-\>[150I]\AgdaPostulate{Size}%
-\>[151I]\AgdaSymbol{→}%
-\>[152I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
-\>[153I]\AgdaSymbol{\{}\AgdaBound{A}%
-\>[154I]\AgdaSymbol{:}%
-\>[155I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<%
+\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\AgdaRecord{⊤}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{constructor}\AgdaSpace{}%
+\AgdaInductiveConstructor{trivial}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{List1}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{trivial}\AgdaSpace{}%
+\AgdaInductiveConstructor{∷}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}head\AgdaSymbol{;} tail\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaComment{{-}{-} problem: imports not colored}\<%
 \\
 %
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaSymbol{(}\AgdaBound{step}%
-\>[156I]\AgdaSymbol{:}%
-\>[157I]\AgdaSymbol{∀}%
-\>[158I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}%
-\>[159I]\AgdaSymbol{→}%
-\>[160I]\AgdaBound{S}%
-\>[161I]\AgdaBound{i}%
-\>[162I]\AgdaSymbol{→}%
-\>[163I]\AgdaRecord{List1}%
-\>[164I]\AgdaBound{A}%
-\>[165I]\AgdaRecord{×}%
-\>[166I]\AgdaSymbol{(∀}%
-\>[167I]\AgdaSymbol{\{}\AgdaBound{j}%
-\>[168I]\AgdaSymbol{:}%
-\>[169I]\AgdaPostulate{Size<}%
-\>[170I]\AgdaBound{i}\AgdaSymbol{\}}%
-\>[171I]\AgdaSymbol{→}%
-\>[172I]\AgdaBound{S}%
-\>[173I]\AgdaBound{j}\AgdaSymbol{))}%
-\>[174I]\AgdaSymbol{→}\<%
+\>[0]\AgdaFunction{unfold⁺}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{S}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPostulate{Size}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<%
 \\
 %
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaSymbol{∀}%
-\>[175I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}%
-\>[176I]\AgdaSymbol{→}%
-\>[177I]\AgdaSymbol{(}\AgdaBound{s}%
-\>[178I]\AgdaSymbol{:}%
-\>[179I]\AgdaBound{S}%
-\>[180I]\AgdaBound{i}\AgdaSymbol{)}%
-\>[181I]\AgdaSymbol{→}%
-\>[182I]\AgdaRecord{Stream}%
-\>[183I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}%
-\>[184I]\AgdaBound{A}\<%
+\>[2]\AgdaSymbol{(}\AgdaBound{step}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{S}\AgdaSpace{}%
+\AgdaBound{i}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaRecord{List1}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaRecord{×}\AgdaSpace{}%
+\AgdaSymbol{(∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{j}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPostulate{Size<}\AgdaSpace{}%
+\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{S}\AgdaSpace{}%
+\AgdaBound{j}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{S}\AgdaSpace{}%
+\AgdaBound{i}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaRecord{Stream}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
 %
 \\
 \>[0]\AgdaField{head}%
-\>[6]\AgdaSymbol{(}\AgdaFunction{unfold⁺}%
-\>[185I]\AgdaBound{step}%
-\>[186I]\AgdaBound{s}\AgdaSymbol{)}%
-\>[187I]\AgdaSymbol{=}%
-\>[26]\AgdaField{head}%
-\>[188I]\AgdaSymbol{(}\AgdaField{fst}%
-\>[189I]\AgdaSymbol{(}\AgdaBound{step}%
-\>[190I]\AgdaBound{s}\AgdaSymbol{))}\<%
+\>[6]\AgdaSymbol{(}\AgdaFunction{unfold⁺}\AgdaSpace{}%
+\AgdaBound{step}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[26]\AgdaField{head}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{fst}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{step}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{))}\<%
 \\
 \>[0]\AgdaField{tail}%
-\>[6]\AgdaSymbol{(}\AgdaFunction{unfold⁺}%
-\>[191I]\AgdaBound{step}%
-\>[192I]\AgdaBound{s}\AgdaSymbol{)}%
+\>[6]\AgdaSymbol{(}\AgdaFunction{unfold⁺}\AgdaSpace{}%
+\AgdaBound{step}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}%
 \>[193I]\AgdaSymbol{=}%
 \>[26]\AgdaKeyword{let}%
-\>[31]\AgdaSymbol{((\_}%
-\>[194I]\AgdaInductiveConstructor{∷}%
-\>[195I]\AgdaBound{l}\AgdaSymbol{)}%
-\>[196I]\AgdaInductiveConstructor{,}%
-\>[197I]\AgdaBound{s′}\AgdaSymbol{)}%
-\>[198I]\AgdaSymbol{=}%
-\>[199I]\AgdaBound{step}%
-\>[200I]\AgdaBound{s}\<%
+\>[31]\AgdaSymbol{((\_}\AgdaSpace{}%
+\AgdaInductiveConstructor{∷}\AgdaSpace{}%
+\AgdaBound{l}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaInductiveConstructor{,}\AgdaSpace{}%
+\AgdaBound{s′}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{step}\AgdaSpace{}%
+\AgdaBound{s}\<%
 \\
 \>[193I][@{}l@{\AgdaIndent{0}}]%
 \>[26]\AgdaKeyword{in}%
-\>[31]\AgdaBound{l}%
-\>[201I]\AgdaFunction{++ˢ}%
-\>[202I]\AgdaFunction{unfold⁺}%
-\>[203I]\AgdaBound{step}%
-\>[204I]\AgdaBound{s′}\<%
+\>[31]\AgdaBound{l}\AgdaSpace{}%
+\AgdaFunction{++ˢ}\AgdaSpace{}%
+\AgdaFunction{unfold⁺}\AgdaSpace{}%
+\AgdaBound{step}\AgdaSpace{}%
+\AgdaBound{s′}\<%
 \end{code}
 Problem: The ∷ in the last let statement is not colored with constructor color.
 \end{document}
