--- a/test/LaTeXAndHTML/succeed/Issue2019.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2019.tex
@@ -11,21 +11,21 @@
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaPostulate{s00A0}%
-\>[0I]\AgdaSymbol{:}%
-\>[1I]\AgdaPrimitiveType{Set}%
+\>[2]\AgdaPostulate{s00A0}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}%
 \>[15]\AgdaComment{{-}{-} NO{-}BREAK SPACE        ("\textbackslash{} " with Agda input method)}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaPostulate{s2004}%
-\>[2I]\AgdaSymbol{:}%
-\>[3I]\AgdaPrimitiveType{Set}%
+\>[2]\AgdaPostulate{s2004}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}%
 \>[15]\AgdaComment{{-}{-} THREE{-}PER{-}EM SPACE    ("\textbackslash{};" with Agda input method)}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaPostulate{s202F}%
-\>[4I]\AgdaSymbol{:}%
-\>[5I]\AgdaPrimitiveType{Set}%
+\>[2]\AgdaPostulate{s202F}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}%
 \>[15]\AgdaComment{{-}{-} NARROW NO{-}BREAK SPACE ("\textbackslash{}," with Agda input method)}\<%
 \end{code}
 \end{document}
