--- a/test/LaTeXAndHTML/succeed/Links.tex
+++ b/test/LaTeXAndHTML/succeed/Links.tex
@@ -6,23 +6,23 @@
 \AgdaTarget{ℕ}
 \AgdaTarget{zero}
 \begin{code}%
-\>[0]\AgdaKeyword{data}%
-\>[0I]\AgdaDatatype{ℕ}%
-\>[1I]\AgdaSymbol{:}%
-\>[2I]\AgdaPrimitiveType{Set}%
-\>[3I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaInductiveConstructor{zero}%
-\>[8]\AgdaSymbol{:}%
-\>[4I]\AgdaDatatype{ℕ}\<%
+\>[8]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaInductiveConstructor{suc}%
-\>[8]\AgdaSymbol{:}%
-\>[5I]\AgdaDatatype{ℕ}%
-\>[6I]\AgdaSymbol{→}%
-\>[7I]\AgdaDatatype{ℕ}\<%
+\>[8]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\<%
 \end{code}
 
 See next page for how to define \AgdaFunction{two} (doesn't turn into a
@@ -34,15 +34,15 @@ manually though; \hyperlink{two}{\AgdaDatatype{two}}.
 \AgdaTarget{two}
 \hypertarget{two}{}
 \begin{code}%
-\>[0]\AgdaFunction{two}%
-\>[8I]\AgdaSymbol{:}%
-\>[9I]\AgdaDatatype{ℕ}\<%
+\>[0]\AgdaFunction{two}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\<%
 \\
-\>[0]\AgdaFunction{two}%
-\>[10I]\AgdaSymbol{=}%
-\>[11I]\AgdaInductiveConstructor{suc}%
-\>[12I]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}%
-\>[13I]\AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
+\>[0]\AgdaFunction{two}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
 \end{code}
 
 \AgdaInductiveConstructor{zero} is of type
@@ -55,17 +55,17 @@ Now that the target for \AgdaFunction{two} has been defined the link
 works automatically.
 
 \begin{code}%
-\>[0]\AgdaKeyword{data}%
-\>[14I]\AgdaDatatype{Bool}%
-\>[15I]\AgdaSymbol{:}%
-\>[16I]\AgdaPrimitiveType{Set}%
-\>[17I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{Bool}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaInductiveConstructor{true}%
-\>[18I]\AgdaInductiveConstructor{false}%
-\>[19I]\AgdaSymbol{:}%
-\>[20I]\AgdaDatatype{Bool}\<%
+\>[2]\AgdaInductiveConstructor{true}\AgdaSpace{}%
+\AgdaInductiveConstructor{false}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Bool}\<%
 \end{code}
 
 The AgdaTarget command takes a list as input, enabling several targets
@@ -73,37 +73,37 @@ to be specified as follows:
 
 \AgdaTarget{if, then, else, if\_then\_else\_}
 \begin{code}%
-\>[0]\AgdaFunction{if\_then\_else\_}%
-\>[21I]\AgdaSymbol{:}%
-\>[22I]\AgdaSymbol{\{}\AgdaBound{A}%
-\>[23I]\AgdaSymbol{:}%
-\>[24I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
-\>[25I]\AgdaSymbol{→}%
-\>[26I]\AgdaDatatype{Bool}%
-\>[27I]\AgdaSymbol{→}%
-\>[28I]\AgdaBound{A}%
-\>[29I]\AgdaSymbol{→}%
-\>[30I]\AgdaBound{A}%
-\>[31I]\AgdaSymbol{→}%
-\>[32I]\AgdaBound{A}\<%
+\>[0]\AgdaFunction{if\_then\_else\_}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Bool}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{A}\<%
 \\
-\>[0]\AgdaFunction{if}%
-\>[33I]\AgdaInductiveConstructor{true}%
-\>[34I]\AgdaFunction{then}%
-\>[35I]\AgdaBound{t}%
-\>[36I]\AgdaFunction{else}%
-\>[37I]\AgdaBound{f}%
-\>[38I]\AgdaSymbol{=}%
-\>[39I]\AgdaBound{t}\<%
+\>[0]\AgdaFunction{if}\AgdaSpace{}%
+\AgdaInductiveConstructor{true}\AgdaSpace{}%
+\AgdaFunction{then}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaFunction{else}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{t}\<%
 \\
-\>[0]\AgdaFunction{if}%
-\>[40I]\AgdaInductiveConstructor{false}%
-\>[41I]\AgdaFunction{then}%
-\>[42I]\AgdaBound{t}%
-\>[43I]\AgdaFunction{else}%
-\>[44I]\AgdaBound{f}%
-\>[45I]\AgdaSymbol{=}%
-\>[46I]\AgdaBound{f}\<%
+\>[0]\AgdaFunction{if}\AgdaSpace{}%
+\AgdaInductiveConstructor{false}\AgdaSpace{}%
+\AgdaFunction{then}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaFunction{else}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{f}\<%
 \end{code}
 
 \newpage
