--- a/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.tex
+++ b/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.tex
@@ -5,17 +5,17 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[0I]\AgdaModule{NoNewLinesVsNewLines}%
-\>[1I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{NoNewLinesVsNewLines}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \end{code}
 
 \begin{code}%
 \>[0]\<%
 \\
-\>[0]\AgdaKeyword{module}%
-\>[2I]\AgdaModule{Test2}%
-\>[3I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{Test2}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0]\<%
 \end{code}
