--- a/test/LaTeXAndHTML/succeed/OneSpaceIndent.tex
+++ b/test/LaTeXAndHTML/succeed/OneSpaceIndent.tex
@@ -5,9 +5,9 @@
 
 \AgdaHide{
 \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[0I]\AgdaModule{OneSpaceIndent}%
-\>[1I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{OneSpaceIndent}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \end{code}
 }
 
@@ -16,9 +16,9 @@ Text1
 
 \AgdaHide{
 \begin{code}%
-\>[0]\AgdaKeyword{module}%
-\>[2I]\AgdaModule{Defs}%
-\>[3I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{Defs}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 %
 \\
@@ -31,9 +31,9 @@ Text2
 
 \begin{code}%
 \>[1][@{}l@{\AgdaIndent{1}}]%
-\>[2]\AgdaPostulate{Base}%
-\>[4I]\AgdaSymbol{:}%
-\>[5I]\AgdaPrimitiveType{Set}\<%
+\>[2]\AgdaPostulate{Base}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 Text3
