--- a/test/LaTeXAndHTML/succeed/PatternSynonyms.tex
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms.tex
@@ -3,46 +3,46 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaKeyword{data}%
-\>[0I]\AgdaDatatype{Nat}%
-\>[1I]\AgdaSymbol{:}%
-\>[2I]\AgdaPrimitiveType{Set}%
-\>[3I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{Nat}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaInductiveConstructor{zero}%
-\>[4I]\AgdaSymbol{:}%
-\>[5I]\AgdaDatatype{Nat}\<%
+\>[2]\AgdaInductiveConstructor{zero}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Nat}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaInductiveConstructor{suc}%
-\>[6I]\AgdaSymbol{:}%
-\>[7I]\AgdaDatatype{Nat}%
-\>[8I]\AgdaSymbol{→}%
-\>[9I]\AgdaDatatype{Nat}\<%
+\>[2]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Nat}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Nat}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{pattern}%
-\>[10I]\AgdaInductiveConstructor{two}%
-\>[14]\AgdaSymbol{=}%
-\>[11I]\AgdaInductiveConstructor{suc}%
-\>[12I]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}%
-\>[13I]\AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
+\>[0]\AgdaKeyword{pattern}\AgdaSpace{}%
+\AgdaInductiveConstructor{two}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaKeyword{pattern}%
-\>[14I]\AgdaInductiveConstructor{three}%
-\>[15I]\AgdaSymbol{=}%
-\>[16I]\AgdaInductiveConstructor{suc}%
-\>[17I]\AgdaInductiveConstructor{two}\<%
+\>[0]\AgdaKeyword{pattern}\AgdaSpace{}%
+\AgdaInductiveConstructor{three}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaInductiveConstructor{two}\<%
 \\
 %
 \\
-\>[0]\AgdaKeyword{data}%
-\>[18I]\AgdaDatatype{Bot}%
-\>[19I]\AgdaSymbol{:}%
-\>[20I]\AgdaPrimitiveType{Set}%
-\>[21I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{Bot}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \end{code}
 
 \end{document}
