--- a/test/LaTeXAndHTML/succeed/TeXExtension.tex
+++ b/test/LaTeXAndHTML/succeed/TeXExtension.tex
@@ -8,40 +8,40 @@ Foo
 \begin{code}%
 \>[0]\<%
 \\
-\>[0]\AgdaKeyword{module}%
-\>[0I]\AgdaModule{TeXExtension}%
-\>[1I]\AgdaKeyword{where}\<%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{TeXExtension}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 %
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{data}%
-\>[2I]\AgdaDatatype{Bool}%
-\>[3I]\AgdaSymbol{:}%
-\>[4I]\AgdaPrimitiveType{Set}%
-\>[5I]\AgdaKeyword{where}\<%
+\>[2]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{Bool}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaInductiveConstructor{true}%
-\>[6I]\AgdaSymbol{:}%
-\>[7I]\AgdaDatatype{Bool}\<%
+\>[4]\AgdaInductiveConstructor{true}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Bool}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaInductiveConstructor{false}%
-\>[8I]\AgdaSymbol{:}%
-\>[9I]\AgdaDatatype{Bool}\<%
+\>[4]\AgdaInductiveConstructor{false}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Bool}\<%
 \\
 %
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaFunction{b}%
-\>[10I]\AgdaSymbol{:}%
-\>[11I]\AgdaDatatype{Bool}\<%
+\>[2]\AgdaFunction{b}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Bool}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaFunction{b}%
-\>[12I]\AgdaSymbol{=}%
-\>[13I]\AgdaInductiveConstructor{false}\<%
+\>[2]\AgdaFunction{b}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{false}\<%
 \\
 \>[0]\<%
 \end{code}
