--- a/test/LaTeXAndHTML/succeed/UnicodeDeclare.tex
+++ b/test/LaTeXAndHTML/succeed/UnicodeDeclare.tex
@@ -14,9 +14,9 @@
 \begin{code}%
 \>[0]\AgdaComment{{-}{-} ◯ = Set}\<%
 \\
-\>[0]\AgdaFunction{◯}%
-\>[0I]\AgdaSymbol{=}%
-\>[1I]\AgdaPrimitiveType{Set}\<%
+\>[0]\AgdaFunction{◯}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \end{code}
 
 \end{document}
