[ #2019 ] Whitespace is now preserved in many cases.
For instance outside of code blocks, in Agda comments, and in Agda
string literals.

--- a/test/LaTeXAndHTML/succeed/Issue2019.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2019.tex
@@ -28,4 +28,26 @@
 \AgdaPrimitiveType{Set}%
 \>[15]\AgdaComment{{-}{-} NARROW NO{-}BREAK SPACE ("\textbackslash{}," with Agda input method)}\<%
 \end{code}
+
+% Various whitespace characters: "    ".
+\begin{code}%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Agda.Builtin.String}\<%
+\\
+%
+\\
+\>[0]\AgdaComment{{-}{-} Various whitespace characters: "    ".}\<%
+\\
+%
+\\
+\>[0]\AgdaFunction{various{-}whitespace{-}characters}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPostulate{String}\<%
+\\
+\>[0]\AgdaFunction{various{-}whitespace{-}characters}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaString{"    "}\<%
+\end{code}
+
 \end{document}
